# near_mem_nsg

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
bins/: CMakeLists.txt  DDR4-config.cfg  config.toml  main  main.cc  sim  simulation.cc
include/: component.h  ramulator_wrapper.h  task_queue.h
src/: component.h  controller.cc  controller.h  dc.cc  dc.h  nsg_search.h  pe.cc  pe.h  qe.cc  qe.h  ramulator_wrapper.cc  ramulator_wrapper.h  simulator.cc  simulator.h  struct.h  task_queue.cc  task_queue.h
tests/: CMakeLists.txt  cpp20test.cc  cpp_bloom_test.cc  log_test.cc  mem_stats.txt  ramulator_test.cc  task_queue_test.cc
